--- a/.github/workflows/build-gateway-terraform-pipeline.yml
+++ b/.github/workflows/build-gateway-terraform-pipeline.yml
@@ -1,13 +1,16 @@
-name: Destroy Core Infrastructure
+name: Build Gateway Infrastructure
 
 on:
     workflow_dispatch: 
 
 jobs:
-  destroy-terraform:
+  build-terraform:
     runs-on: ubuntu-latest
     env:
-      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+      TF_VAR_load_balancer_arn_uploader: ${{ vars.LOAD_BALANCER_ARN_UPLOADER }}
+      TF_VAR_load_balancer_dns_uploader: ${{ vars.LOAD_BALANCER_DNS_UPLOADER }}
+      TF_VAR_fastfood_aws_access_key_id: ${{ secrets.HACK_AWS_ACCESS_KEY_ID }}
+      TF_VAR_fastfood_aws_secret_access_key: ${{ secrets.HACK_AWS_SECRET_ACCESS_KEY }}
 
     steps:
       - name: Checkout Repository
@@ -28,15 +31,15 @@ jobs:
 
       - name: Terraform Init
         run: |
-            cd infra
+            cd infra/gateway
             terraform init
 
       - name: Terraform Plan
         run: |
-            cd infra
+            cd infra/gateway
             terraform plan
 
-      - name: Terraform Destroy
+      - name: Terraform Apply
         run: |
-            cd infra
-            terraform destroy --auto-approve
+            cd infra/gateway
+            terraform apply --auto-approve
