--- a/.github/workflows/build-terraform-pipeline.yml
+++ b/.github/workflows/build-terraform-pipeline.yml
@@ -1,4 +1,4 @@
-name: Build Infrastructure
+name: Build Core Infrastructure
 
 on:
     workflow_dispatch: 
@@ -7,11 +7,7 @@ jobs:
   build-terraform:
     runs-on: ubuntu-latest
     env:
-      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
-      TF_VAR_load_balancer_arn_uploader: ${{ vars.LOAD_BALANCER_ARN_UPLOADER }}
-      TF_VAR_load_balancer_dns_uploader: ${{ vars.LOAD_BALANCER_DNS_UPLOADER }}
-      TF_VAR_fastfood_aws_access_key_id: ${{ secrets.HACK_AWS_ACCESS_KEY_ID }}
-      TF_VAR_fastfood_aws_secret_access_key: ${{ secrets.HACK_AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }} /////////////Hackathon2025
 
     steps:
       - name: Checkout Repository
