--- a/.github/workflows/destroy-gateway-terraform-pipeline.yml
+++ b/.github/workflows/destroy-gateway-terraform-pipeline.yml
@@ -1,4 +1,4 @@
-name: Destroy Core Infrastructure
+name: Destroy Gateway Infrastructure
 
 on:
     workflow_dispatch: 
@@ -7,7 +7,10 @@ jobs:
   destroy-terraform:
     runs-on: ubuntu-latest
     env:
-      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+      TF_VAR_load_balancer_arn_uploader: ${{ vars.LOAD_BALANCER_ARN_UPLOADER }}
+      TF_VAR_load_balancer_dns_uploader: ${{ vars.LOAD_BALANCER_DNS_UPLOADER }}
+      TF_VAR_fastfood_aws_access_key_id: ${{ secrets.HACK_AWS_ACCESS_KEY_ID }}
+      TF_VAR_fastfood_aws_secret_access_key: ${{ secrets.HACK_AWS_SECRET_ACCESS_KEY }}
 
     steps:
       - name: Checkout Repository
@@ -28,15 +31,15 @@ jobs:
 
       - name: Terraform Init
         run: |
-            cd infra
+            cd infra/gateway
             terraform init
 
       - name: Terraform Plan
         run: |
-            cd infra
+            cd infra/gateway
             terraform plan
 
       - name: Terraform Destroy
         run: |
-            cd infra
+            cd infra/gateway
             terraform destroy --auto-approve
